1 重写粉丝和关注界面 2 为个界面添加无数据时候 不同提示文字 3 基类添加 initSomeData() 方法便于 接收传递参数或其他数据初始化 4 普通用户主页 部分界面 5 添加 无数据返回时候的 NoResponeBackModel 6 添加部分逻辑

--- a/elapp/src/main/res/layout/activity_vip_page_layout.xml
+++ b/elapp/src/main/res/layout/activity_vip_page_layout.xml
@@ -76,6 +76,7 @@
                                 android:layout_above="@id/vip_number"
                                 android:layout_marginBottom="5dp"
                                 android:text="火眼财经资深投顾"
+                                android:maxLength="15"
                                 android:textColor="@color/white"
                                 android:textSize="16sp"/>
 
