--- a/elapp/src/main/res/values/styles.xml
+++ b/elapp/src/main/res/values/styles.xml
@@ -26,6 +26,14 @@
         <item name="android:background">@drawable/list_item_selector</item>
     </style>
 
+    <style name="item_setting">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">44dp</item>
+        <item name="android:paddingLeft">22dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
     <style name="item_my_setting_title">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
