1 普通用户主页 2 为新闻视频详情页 添加观看统计接口 3 添加API 统一字段管理 4 Utils 里添加用户主页界面跳转逻辑

--- a/elapp/src/main/res/layout/item_user_page_comment_layout.xml
+++ b/elapp/src/main/res/layout/item_user_page_comment_layout.xml
@@ -22,14 +22,12 @@
             android:id="@+id/user_comment_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:padding="5dp"
-            android:src="@drawable/test_img"/>
+            android:src="@drawable/ic_user_stock"/>
         <TextView
             android:id="@+id/user_comment_target_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:layout_marginLeft="1dp"
             android:maxLines="1"
             android:ellipsize="end"
             android:textColor="@color/white"
@@ -38,12 +36,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="13dp">
+            >
 
             <com.easyvaas.common.widget.MyUserPhoto
                 android:id="@+id/user_comment_avator"
                 android:src="@drawable/user_avtor"
                 android:scaleType="centerCrop"
+                android:layout_marginTop="13dp"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
             <TextView
@@ -54,7 +53,7 @@
                 android:textSize="14sp"
                 android:layout_toRightOf="@id/user_comment_avator"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="16dp"
                 android:text="浅海野"/>
             <TextView
                 android:id="@+id/user_comment_praise_counts"
@@ -68,6 +67,8 @@
                 android:id="@+id/user_comment_praise_icon"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:src="@drawable/selector_praise_btn"
+                android:layout_marginTop="9dp"
                 android:layout_toLeftOf="@id/user_comment_praise_counts"/>
             <TextView
                 android:id="@+id/user_comment_content"
