--- a/elapp/src/main/res/layout/item_video_living.xml
+++ b/elapp/src/main/res/layout/item_video_living.xml
@@ -68,7 +68,7 @@
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="22dp"
-                android:gravity="center_vertical"
+                android:gravity="start"
                 android:maxLines="1"
                 android:text="安邦举牌格力的可能性分析"
                 android:textColor="@color/title_text_color"
