1 视频付费流程完成 2 发起直播添加付费选项 3 修复发起直播切换摄像头bug 页面修改 4 修改个人中心模块许多界面细节和显示逻辑 5 大部分接口调试完毕 6 暂时修改用户信息获取保存逻辑问题

--- a/elapp/src/main/res/layout/activity_player.xml
+++ b/elapp/src/main/res/layout/activity_player.xml
@@ -35,7 +35,8 @@
                 <com.easyvaas.elapp.view.live.PlayerNeedPayView
                     android:id="@+id/player_pay_mask"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:visibility="gone"/>
             </RelativeLayout>
 
             <RelativeLayout
