--- a/elapp/src/main/res/layout/activity_live_preapre.xml
+++ b/elapp/src/main/res/layout/activity_live_preapre.xml
@@ -50,7 +50,7 @@
             android:layout_height="74dp"
             android:layout_below="@+id/rl_title"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="38dp">
+            android:layout_marginTop="40dp">
 
             <LinearLayout
                 android:id="@+id/live_cover_ll"
@@ -82,8 +82,57 @@
                 app:border_radius="5dp"
                 app:type="round" />
         </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/live_pay_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/live_cover_tip_ll"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/live_pay_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="9dp"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:text="@string/live_pay"/>
+            <com.easyvaas.elapp.view.live.SwitchButton
+                android:id="@+id/live_pay_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                app:sb_button_color="@color/white"
+                app:sb_background="@color/white_alpha_percent_50"
+                app:sb_show_indicator="false"
+                app:sb_checked_color="@color/tab_text_color_selected"
+                app:sb_checked="false"
+                />
+        </LinearLayout>
 
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/live_pay_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            >
+            <EditText
+                android:id="@+id/live_pay_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/live_pay_tips"
+                android:textSize="14sp"
+                android:visibility="gone"
+                android:inputType="number"
+                android:gravity="center"
+                android:background="@drawable/shape_pay_input"
+                android:textColor="@color/white"
+                android:textColorHint="@color/live_prepare_edit_text_color"
+                android:imeOptions="actionDone"
+                />
+        </LinearLayout>
         <ProgressBar
             android:id="@+id/live_prepare_pb"
             style="@style/init_player_progressBar"
@@ -103,9 +152,9 @@
             android:id="@+id/share_prompt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/live_cover_tip_ll"
+            android:layout_below="@+id/live_pay_layout"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="74dp"
+            android:layout_marginTop="85dp"
             android:text="@string/share_prompt"
             android:textColor="@color/text_color_white"
             android:textSize="16sp"
@@ -197,11 +246,11 @@
         <FrameLayout
             android:id="@+id/rl_title"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/live_pre_action_top"
-            android:layout_marginTop="23dp"
+            android:layout_marginTop="15dp"
             android:background="@color/live_prepare_edit_bg">
 
             <EditText
