--- a/elapp/src/main/res/layout/activity_cash_in.xml
+++ b/elapp/src/main/res/layout/activity_cash_in.xml
@@ -123,7 +123,7 @@
                 android:padding="5dp"
                 android:text="@string/cash_in_option_weixin"
                 android:textColor="#59b64c"
-                android:visibility="visible"/>
+                android:visibility="gone"/>
 
             <RadioButton
                 android:id="@+id/cash_in_option_alipay_rb"
