--- a/elapp/src/main/res/layout/player_need_pay_layout.xml
+++ b/elapp/src/main/res/layout/player_need_pay_layout.xml
@@ -30,7 +30,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:text="2031"
+                    android:text="0"
                     android:textColor="@color/pay_text_yellow"
                     android:textSize="24sp"
                     />
@@ -101,5 +101,6 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="12dp"
         android:layout_marginTop="10dp"
+        android:visibility="gone"
         android:src="@drawable/btn_share_w_n"/>
 </RelativeLayout>
