UI优化，，编辑资料页面修改

--- a/elapp/src/main/res/layout/item_video_living.xml
+++ b/elapp/src/main/res/layout/item_video_living.xml
@@ -85,6 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="金色红牛"
+                    android:maxLength="6"
                     android:textColor="@color/text_color_gray"
                     android:textSize="14sp"/>
 
