--- a/elapp/src/main/res/layout/activity_user_info.xml
+++ b/elapp/src/main/res/layout/activity_user_info.xml
@@ -55,6 +55,7 @@
                     android:layout_alignRight="@id/user_info_portrait_iv"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="3dp"
+                    android:visibility="gone"
                     android:src="@drawable/login_personal_setting_icon_photo"/>
 
                 <ImageView
@@ -79,7 +80,7 @@
             <RelativeLayout
                 android:id="@+id/user_info_item_nickname"
                 style="@style/item_user_info_edit"
-                android:background="@color/white">
+                android:background="?attr/selectableItemBackground">
 
                 <TextView
                     android:id="@+id/nickname_tv"
@@ -91,21 +92,28 @@
                     android:textColor="@color/base_gray"
                     android:textSize="@dimen/text_size_16"/>
 
-                <EditText
-                    android:id="@+id/user_info_nickname_et"
+                <TextView
+                    android:id="@+id/user_info_nickname_tv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="54dp"
                     android:layout_toRightOf="@id/nickname_tv"
-                    android:background="@null"
                     android:gravity="center_vertical|left"
-                    android:hint="@string/nickname"
+                    android:hint="@string/nickname_hit"
                     android:maxLength="15"
                     android:maxLines="1"
                     android:textColor="@color/text_user_info_edit"
                     android:textColorHint="@color/text_user_info_hint"
                     android:textSize="@dimen/text_size_16"/>
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="14dp"
+                    android:src="@drawable/arrow_right_xm"/>
 
             </RelativeLayout>
 
@@ -254,7 +262,8 @@
 
             <RelativeLayout
                 android:id="@+id/user_info_item_certificate"
-                style="@style/item_user_info_edit">
+                style="@style/item_user_info_edit"
+                android:background="?attr/selectableItemBackground">
 
                 <View
                     android:layout_width="match_parent"
@@ -264,7 +273,7 @@
                     android:background="#eeeeee"/>
 
                 <TextView
-                    android:id="@+id/certificate_tv"
+                    android:id="@+id/certificate_tv_tips"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -273,15 +282,14 @@
                     android:textColor="@color/base_gray"
                     android:textSize="@dimen/text_size_16"/>
 
-                <EditText
-                    android:id="@+id/certificate_et"
+                <TextView
+                    android:id="@+id/certificate_tv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="54dp"
-                    android:layout_toRightOf="@id/certificate_tv"
-                    android:background="@null"
+                    android:layout_toRightOf="@id/certificate_tv_tips"
                     android:ellipsize="end"
                     android:gravity="center_vertical|left"
                     android:hint="@string/certificate_hint"
@@ -289,6 +297,14 @@
                     android:textColor="@color/text_user_info_edit"
                     android:textColorHint="@color/text_user_info_hint"
                     android:textSize="@dimen/text_size_16"/>
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="14dp"
+                    android:src="@drawable/arrow_right_xm"/>
 
             </RelativeLayout>
 
@@ -305,7 +321,7 @@
                     android:background="#eeeeee"/>
 
                 <TextView
-                    android:id="@+id/user_label_tv"
+                    android:id="@+id/user_label_tv_tips"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -314,15 +330,18 @@
                     android:textColor="@color/base_gray"
                     android:textSize="@dimen/text_size_16"/>
 
-                <com.easyvaas.elapp.view.flowlayout.FlowLayout
-                    android:id="@+id/user_label_fl"
+                <TextView
+                    android:id="@+id/user_label_tv"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="14dp"
+                    android:textSize="@dimen/text_size_16"
+                    android:textColor="#4281ad"
                     android:layout_toLeftOf="@+id/certificate_iv7"
-                    android:layout_toRightOf="@+id/user_label_tv"
-                    android:gravity="left"/>
+                    android:layout_toRightOf="@+id/user_label_tv_tips"
+                    android:gravity="left|center_vertical"
+                    android:maxLines="1"/>
 
                 <ImageView
                     android:id="@+id/certificate_iv7"
