--- a/elapp/src/main/res/layout/popup_window_user_info_edit.xml
+++ b/elapp/src/main/res/layout/popup_window_user_info_edit.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#f9f9f9"
-        android:paddingBottom="252dp">
+        android:background="#f9f9f9">
 
         <android.support.v7.widget.CardView
             android:id="@+id/cv_input"
@@ -55,6 +53,7 @@
             app:cardCornerRadius="6dp">
 
             <TextView
+                android:id="@+id/pop_confirm_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/base_gray"
@@ -75,6 +74,7 @@
             android:layout_toLeftOf="@+id/cv_confirm"
             android:elevation="0dp"
             android:foreground="?attr/selectableItemBackground"
+            android:visibility="gone"
             app:cardCornerRadius="6dp">
 
             <TextView
@@ -90,4 +90,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</FrameLayout>
