--- a/elapp/src/main/res/layout/activity_image_text_live.xml
+++ b/elapp/src/main/res/layout/activity_image_text_live.xml
@@ -68,10 +68,9 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/tv_company"
+                            android:id="@+id/tv_signature"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="四川财经网  投资经理"
                             android:textColor="#303030"
                             android:textSize="14sp" />
                     </LinearLayout>
