--- a/elapp/src/main/res/layout/live_end_playback.xml
+++ b/elapp/src/main/res/layout/live_end_playback.xml
@@ -92,7 +92,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/follow_count"
+                android:text="新增关注"
                 android:textColor="@color/text_color_gray"
                 android:textSize="16sp" />
         </LinearLayout>
