--- a/elapp/src/main/res/layout/item_user_buy_video.xml
+++ b/elapp/src/main/res/layout/item_user_buy_video.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/white"
@@ -55,6 +56,31 @@
             android:text="2017/05/13"
             android:textColor="@color/text_gray"
             android:textSize="14sp"/>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_pay"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/video_user"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="4dp"
+            android:layout_toRightOf="@+id/cv_operator"
+            android:elevation="0dp"
+            app:cardCornerRadius="4dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/video_living_pay"
+                android:gravity="center"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="付费"
+                android:textColor="@color/white"
+                android:textSize="12sp"/>
+
+        </android.support.v7.widget.CardView>
 
         <RelativeLayout
             android:id="@+id/video_video"
