--- a/elapp/src/main/res/layout/activity_web_detail.xml
+++ b/elapp/src/main/res/layout/activity_web_detail.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"
         android:background="@color/title_view_bg"
+        android:visibility="gone"
         android:orientation="vertical">
 
         <ImageView
@@ -121,25 +122,6 @@
         android:background="@android:color/white"
         android:visibility="visible">
 
-
-        <ImageView
-            android:id="@+id/tv_news_share"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="12dp"
-            android:layout_toLeftOf="@+id/tv_news_collect"
-            android:src="@drawable/btn_share_n"
-            />
-
-        <ImageView
-            android:id="@+id/tv_news_collect"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="12dp"
-            android:layout_toLeftOf="@+id/tv_news_comment"
-            android:src="@drawable/selector_news_collect"
-           />
-
         <ImageView
             android:id="@+id/tv_news_comment"
             android:layout_width="45dp"
@@ -164,17 +146,50 @@
             android:text=""
             android:visibility="visible"/>
 
+        <ImageView
+            android:id="@+id/tv_news_share"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="12dp"
+            android:layout_toLeftOf="@+id/tv_news_collect"
+            android:src="@drawable/btn_share_n"
+            />
+
+        <ImageView
+            android:id="@+id/tv_news_collect"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="12dp"
+            android:layout_toLeftOf="@+id/tv_news_comment"
+            android:src="@drawable/selector_news_collect"
+           />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_toLeftOf="@id/tv_news_share"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/iv_news_back"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:scaleType="center"
+            android:src="@drawable/icon_back"/>
         <TextView
             android:id="@+id/tv_news_comment_hint"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:layout_margin="5dp"
-            android:layout_toLeftOf="@id/tv_news_share"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
             android:background="@drawable/shape_chat_input_bg"
             android:hint="@string/stock_detail_chat_hint"/>
 
+    </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
